<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.luxin.tianchicamera.MainActivity">

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:textSize="18dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/camera_style"

        android:text="请拍照" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="管线信息"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_road"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_road" />

            <EditText
                android:id="@+id/et_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_number" />

            <EditText
                android:id="@+id/et_guanduan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_guanduan"
                android:inputType="number" />


            <EditText
                android:id="@+id/et_guanjing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_guanjing"
                android:inputType="number" />

            <EditText
                android:id="@+id/et_caizhi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_caizhi" />

            <EditText
                android:id="@+id/et_mixtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_hunjietype" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location" />

            <EditText
                android:id="@+id/et_wushuilaiyuan"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_wushuilaiyuan" />

            <EditText
                android:id="@+id/et_liuliang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_liuliang" />

            <EditText
                android:id="@+id/et_picturename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_picturename" />

            <EditText
                android:id="@+id/et_beizhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/hint_beizhu"
                android:lines="5" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_btn"
                    android:text="提交" />

                <Button
                    android:id="@+id/btn_submitandadd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/style_btn"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="提交并再次添加" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</LinearLayout>

